# theme_extractor

./: .gitignore  .swp  Cargo.toml  README.md  rustfmt.toml
mappings/: mapper_template.json  template.json  vscode.json
src/: colored_json.rs  lib.rs  main.rs  mappings.rs  serde_map.rs  skip_nulls.rs  theme.rs
