[package]
name = "theme-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.26", features = ["serialize"] }
colored = "2.0"
anyhow = "1.0"
itertools = "0.10"
enumn = "0.1"
parse-display = "0.8"
clap = { version = "4.0", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }
bimap = { version = "0.6.2", features = ["serde"] }
